--- a/posts/2024-08-28-tidycensus-exploration-pt3/index.qmd
+++ b/posts/2024-08-28-tidycensus-exploration-pt3/index.qmd
@@ -38,8 +38,8 @@ library(gt)
 
 ```{r my.theme, include=TRUE, echo=FALSE}
 my.theme <- theme(
-  plot.title = ggtext::element_textbox_simple(face="bold", size=24, margin=margin(b=5)),
-  plot.subtitle = ggtext::element_textbox_simple(color="#444444", size=14, margin=margin(b=10)),
+  plot.title = ggtext::element_textbox_simple(face="bold", size=24,
+  plot.subtitle = ggtext::element_textbox_simple(color="#444444", size=14,
   plot.caption = element_text(color="#444444"),
   axis.title = element_text(color="black", face="bold", size=12), 
   axis.text = element_text(color="black", size=18), 
@@ -74,8 +74,6 @@ With the `tidycensus::` package, I can gather 5-year ACS data for these series f
 
 
 
-
-
 ## Fetching from the `tidycensus::` API
 
 ```{r year_acs, include=FALSE}
@@ -90,8 +88,9 @@ In Part One, I used the `usmap::` package to quickly map state and county-level 
 *  It doesn't map using ggplot2, so it's less customizable than I like, and
 *  It's only built for US maps of states and counties (and in this post, I want to map smaller areas).
 
-Fortunately, `tidycensus::` is built for this, too! The `get_decennial()` and `get_acs()` functions have an argument for `geometry=`, which if set to TRUE, will return the polygons for your data along with the fields requested in the API call.
+Fortunately, `tidycensus::` is built for this, too! The `get_decennial()` and `get_acs()` functions have an argument for `geometry=`, which if set to TRUE, will return the polygons for your data along with the fields requested in the API call. Geographic options include: "state", "county", "block group", "tract", "block", and "zcta" (zip code tabulation area).[^3]
 
+[^3]: Other geometries, such as school districts, can be accessed directly from the `tigris::` package.
 
 ```{r}
 acs_data_block_group <- get_acs(
@@ -110,7 +109,11 @@ acs_data_block_group %>%
   # filter(county == 'Denver County') %>% 
   ggplot(.) +
   geom_sf(aes(fill = estimate), color = NA) +
-  scale_fill_viridis_c(option = "plasma", name = "Median Household Income") +
+  # removes the grid from the viz
+  coord_sf(datum = NA) + 
+  scale_fill_viridis_c(option = "plasma", 
+                       name = "Median Household Income",
+                       labels = dollar) +
   labs(title = "Median Household Income by Block Group in Denver County, CO (ACS 2022)",
        caption = "Source: US Census Bureau, ACS 5-year estimates") +
   theme_minimal()
