--- a/posts/2024-08-28-tidycensus-exploration-pt3/index.qmd
+++ b/posts/2024-08-28-tidycensus-exploration-pt3/index.qmd
@@ -38,8 +38,8 @@ library(gt)
 
 ```{r my.theme, include=TRUE, echo=FALSE}
 my.theme <- theme(
-  plot.title = ggtext::element_textbox_simple(face="bold", size=24,
-  plot.subtitle = ggtext::element_textbox_simple(color="#444444", size=14,
+  plot.title = ggtext::element_textbox_simple(face="bold", size=24),
+  plot.subtitle = ggtext::element_textbox_simple(color="#444444", size=14),
   plot.caption = element_text(color="#444444"),
   axis.title = element_text(color="black", face="bold", size=12), 
   axis.text = element_text(color="black", size=18), 
