--- a/posts/2024-08-28-tidycensus-exploration-pt3/index.qmd
+++ b/posts/2024-08-28-tidycensus-exploration-pt3/index.qmd
@@ -20,9 +20,9 @@ editor:
 
 In [Part One](https://mrafa3.github.io/posts/2024-08-13-tidycensus-exploration/), I demonstrated how to fetch data and do some basic analysis of U.S. Census data. Each API call with the `tidycensus::` package can only be for one year of data, so to do longitudinal analysis requires some additional wrangling. In this post, I'll build a script that iterates through the available years, fetches the data, then combines the data into a single dataframe. Then, I'll unpack some of the trends seen in child poverty in Colorado.
 
-In [Part Two]()
+In [Part Two](https://mrafa3.github.io/posts/2024-08-20-tidycensus-exploration-pt2/), I showed how to fetch multiple years of data from the American Community Survey and create a single dataframe using `purrr::map_df()`. Then, I showed some different ways of visualizing the data, including margins of error, time series, and using Observable Plot.
 
-In this post, I'd like to drill down further -- to the Census block level -- to demonstrate how to fetch, wrangle, and visualize data using `tidycensus::`.
+In this post, I'd like to drill down further -- to the Census tract level -- to demonstrate how to fetch, wrangle, and visualize data using `tidycensus::`.
 
 ## Setup
 
@@ -32,6 +32,7 @@ library(tidycensus)
 library(scales)
 library(janitor)
 library(gt)
+library(tigris)
 
 # census_api_key('INSERT KEY HERE')
 ```
@@ -57,67 +58,125 @@ my.theme <- theme(
 
 # Data
 
-As I did in Part One, I'll use the following series from the American Community Survey (ACS):
+As I did in the prior demos, I'll use data from the American Community Survey (ACS). This time, I'll show how to fetch data at the **table** level (as opposed to prior posts where I've pulled individual variables).
 
--   *B01001_003*: Estimate!!Total:!!Male:!!Under 5 years (all racial
-    groups)
--   *B01001_027*: Estimate!!Total:!!Female:!!Under 5 years (all racial
-    groups)
--   *B17001_004*: Estimate!!Total:!!Income in the past 12 months below
-    poverty level:!!Male:!!Under 5 years
--   *B17001_018*: Estimate!!Total:!!Income in the past 12 months below
-    poverty level:!!Female:!!Under 5 years
+I'd like to analyze and map data related to children and health insurance coverage. Using the `tidycensus::load_variables()` function and searching on "health insurance" shows all variables that include that in the American Community Survey.
 
-With the `tidycensus::` package, I can gather 5-year ACS data for these series from 2009 to 2022.[^1]
-
-[^1]: According to the `tidycensus::` documentation, 5-year ACS data is available from 2009 through 2022, with the exception of 2020.
-
-
-
-## Fetching from the `tidycensus::` API
-
-```{r year_acs, include=FALSE}
-years <- seq(2009, 2022) %>% 
-  # no 2020 data from the ACS
-  setdiff(2020)
+```{r inspect_variables, include=TRUE}
+load_variables(2022, "acs5", cache = TRUE) %>% 
+  filter(str_detect(label, "health insurance"),
+         geography == 'tract')
 ```
 
+This search led me to table "B27001" (you can identify tables using the `name` column and all characters prior to the underscore). Now, in the `get_acs()` function, I'll use the `table=` argument instead of the `variables=`.
+
+```{r health_insurance_vars, include=TRUE, echo=FALSE}
+(health_insurance_vars <- load_variables(2022, "acs5", cache = TRUE) %>% 
+  filter(str_detect(name, "B27001")))
+```
+
+## A note on mapping with `tidycensus::`
 
 In Part One, I used the `usmap::` package to quickly map state and county-level data. This package is handy for a quick US map, but it does have limitations, including:
 
-*  It doesn't map using ggplot2, so it's less customizable than I like, and
+*  It doesn't map using ggplot2, so it's not as pretty or customizable than I like, and
 *  It's only built for US maps of states and counties (and in this post, I want to map smaller areas).
 
-Fortunately, `tidycensus::` is built for this, too! The `get_decennial()` and `get_acs()` functions have an argument for `geometry=`, which if set to TRUE, will return the polygons for your data along with the fields requested in the API call. Geographic options include: "state", "county", "block group", "tract", "block", and "zcta" (zip code tabulation area).[^3]
+Fortunately, `tidycensus::` is built for this, too! The `get_decennial()` and `get_acs()` functions have an argument for `geometry=`, which if set to TRUE, will return the polygons for your data along with the fields requested in the API call. Geographic options include: "state", "county", "block group", "tract", "block", and "zcta" (zip code tabulation area).[^1]
 
-[^3]: Other geometries, such as school districts, can be accessed directly from the `tigris::` package.
+[^1]: Other geometries, such as school districts, can be accessed directly from the `tigris::` package.
 
-```{r}
-acs_data_block_group <- get_acs(
-  geography = "block group",
+```{r acs_data_block_group2, include=TRUE}
+acs_data_tract <- get_acs(
+  geography = "tract",
   state = "CO",
-  county = "Denver",
-  variables = 'B19013_001',
+  county = c("Denver", "Jefferson"),
+  # table = "B27001",
+  variables = c(male_u6_pop = "B27001_003", 
+                male_u6_insured = "B27001_004", 
+                female_u6_pop = "B27001_031", 
+                female_u6_insured = "B27001_032"),
   year = 2022,
   survey = "acs5",
+  output = 'wide',
   geometry = TRUE
 )
+```
+```{r mutate_acs_data_tract, include=TRUE, results='hide'}
+acs_data_tract <- acs_data_tract %>% 
+  mutate(total_u6_popE = male_u6_popE + female_u6_popE,
+         total_u6_insuredE = male_u6_insuredE + female_u6_insuredE,
+         perc_u6_insured = total_u6_insuredE / total_u6_popE,
+         total_u6_insured_MOEcalc = moe_sum(male_u6_insuredM, female_u6_insuredM),
+         perc_u6_insured_MOEcalc = total_u6_insured_MOEcalc / total_u6_popE)
+```
 
-# Plot the data using ggplot2
-acs_data_block_group %>% 
-  filter(variable == 'B19013_001') %>% 
-  # filter(county == 'Denver County') %>% 
+With the `tigris::` package, you can download major map features, including roads and water areas, which make maps more immediately relatable. In this post, I'm exploring Census tract data, which is not a well known unit, so adding 
+
+
+```{r}
+den_roads <- roads("CO", "Denver") %>% 
+  filter(RTTYP %in% c("I", "S", "U", "C"))
+
+den_water <- area_water("CO", "Denver")
+
+jeff_roads <- roads("CO", "Jefferson") %>% 
+  filter(RTTYP %in% c("I", "S", "U", "C"))
+
+jeff_water <- area_water("CO", "Jefferson")
+```
+
+
+
+```{r fig.width=10, fig.height=10, include=TRUE}
+acs_data_tract %>% 
+  filter(str_detect(NAME, 'Denver County')) %>%
   ggplot(.) +
-  geom_sf(aes(fill = estimate), color = NA) +
+  geom_sf(aes(fill = perc_u6_insured), color = NA) +
+  geom_sf(data=den_roads,
+          color="gray30") + 
+  geom_sf(data=den_water,
+          color='steelblue2', fill='steelblue2') + 
   # removes the grid from the viz
   coord_sf(datum = NA) + 
   scale_fill_viridis_c(option = "plasma", 
-                       name = "Median Household Income",
-                       labels = dollar) +
-  labs(title = "Median Household Income by Block Group in Denver County, CO (ACS 2022)",
-       caption = "Source: US Census Bureau, ACS 5-year estimates") +
-  theme_minimal()
+                       labels = percent) +
+  ggtitle(
+    "Percent of Children (under 6) with Health Insurance",
+    subtitle = 'Denver County, CO (ACS 2022)'
+  ) + 
+  labs(caption = "Source: US Census Bureau, ACS 5-year estimates") +
+  theme_minimal() + 
+  theme(plot.title = ggtext::element_textbox_simple(face="bold", size=24),
+        legend.title = element_blank())
 ```
+
+
+
+```{r fig.width=10, fig.height=25}
+acs_data_tract %>% 
+  filter(str_detect(NAME, 'Jefferson County')) %>%
+  ggplot(.) +
+  geom_sf(aes(fill = perc_u6_insured), color = NA) +
+  geom_sf(data=jeff_roads,
+          color="gray30") + 
+  geom_sf(data=jeff_water,
+          color='steelblue2', fill='steelblue2') + 
+  # removes the grid from the viz
+  coord_sf(datum = NA) + 
+  scale_fill_viridis_c(option = "plasma", 
+                       labels = percent) +
+  ggtitle(
+    "Percent of Children (under 6) with Health Insurance",
+    subtitle = 'Jefferson County, CO (ACS 2022)'
+  ) + 
+  labs(caption = "Source: US Census Bureau, ACS 5-year estimates") +
+  theme_minimal() + 
+  theme(plot.title = ggtext::element_textbox_simple(face="bold", size=22),
+        legend.title = element_blank())
+```
+
+
 
 
 
